added speed and cache mamory usage for both systems

--- a/report/main.tex
+++ b/report/main.tex
@@ -354,6 +354,35 @@ The microNOVA MP/100 also supported fixed-point integers using two's complement 
 \end{itemize}
 
 Both systems focused on basic numeric operations, reflecting the technological limits of their time.
+\section{Speed of Each System}
+
+\subsection{Fairchild 9440}
+
+The Fairchild 9440 operated with a clock speed of 4 MHz and executed instructions in 2-4 cycles, achieving approximately 1 MIPS (Million Instructions Per Second). Its higher clock speed and efficient instruction set made it faster and better suited for intensive tasks.
+
+\subsection{microNOVA MP/100}
+
+The microNOVA MP/100 had a clock speed of 2 MHz and required 5-7 cycles per instruction, resulting in approximately 0.5 MIPS. It was slower than the Fairchild 9440 but focused on simpler tasks, prioritizing cost-effectiveness.
+
+\subsection{Comparison}
+
+The Fairchild 9440 was faster due to its higher clock speed and efficient execution, making it suitable for demanding applications. The microNOVA MP/100 was slower but sufficient for basic tasks, reflecting its design for simplicity and affordability.
+
+\section{Cache Memory Usage}
+
+\subsection{Fairchild 9440}
+
+The Fairchild 9440 did not use cache memory. It relied on direct memory access and pipelining for performance.
+
+\subsection{microNOVA MP/100}
+
+The microNOVA MP/100 also lacked cache memory. It used sequential memory access, consistent with its simpler architecture.
+
+\subsection{Comparison}
+
+Neither system utilized cache memory, reflecting the technological constraints of their era. The Fairchild 9440 relied on pipelining to optimize performance, while the microNOVA MP/100 used straightforward sequential memory access.
+
+
 
 \section*{References}
 
